[gd_scene load_steps=5 format=3 uid="uid://b550qq4mofkts"]

[ext_resource type="Texture2D" uid="uid://dj8e2wrpvbhds" path="res://assets/sprites/pressure-plate.png" id="1_3r8x4"]
[ext_resource type="Script" uid="uid://cnqndyvs4215s" path="res://assets/scripts/pressure_plate.gd" id="1_r1cve"]
[ext_resource type="AudioStream" uid="uid://blt1rsdhtq8xk" path="res://assets/sounds/switch-click.mp3" id="3_x2nol"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2nol"]
size = Vector2(6, 1)

[node name="PressurePlate" type="Node2D"]
script = ExtResource("1_r1cve")

[node name="BaseSprite" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_3r8x4")
region_enabled = true
region_rect = Rect2(0, 0, 8, 8)

[node name="PlateSprite" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_3r8x4")
region_enabled = true
region_rect = Rect2(8, 0, 8, 8)

[node name="Base" type="StaticBody2D" parent="."]
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Base"]
visible = false
polygon = PackedVector2Array(-4, 0, 4, 0, 3, -1, -3, -1)

[node name="Plate" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plate"]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_x2nol")

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x2nol")

[connection signal="body_entered" from="Plate" to="." method="_on_plate_body_entered"]
[connection signal="body_exited" from="Plate" to="." method="_on_plate_body_exited"]
